<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddRecords"
    android:background="@drawable/bg_items_removed">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:layout_marginStart="18dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="casual"
            android:paddingStart="5dp"
            android:paddingTop="16dp"
            android:paddingEnd="0dp"
            android:text="@string/addRecords"
            android:textColor="#000000"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="5dp"
        android:layout_margin="15dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:src="@drawable/placeholder_boy_img_jpg"
            android:contentDescription="TODO"
            tools:ignore="ContentDescription,HardcodedText" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/layout_bg_green"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="#0ebe7f"
            android:textSize="18sp"
            android:fontFamily="casual"
            android:text="@string/addMoreImages" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/layout_bg"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/recordFor"
            android:fontFamily="casual"/>
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_mode_edit_24"
            android:layout_marginTop="-20dp"
            android:layout_marginStart="350dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abdullahMamun"
            android:fontFamily="casual"
            android:textColor="#0ebe7f"/>

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="3dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:background="#e5e5e5"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/typeOfRecord"
            android:fontFamily="casual"
            android:textColor="#000000"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report"
                    android:textColor="#677294"
                    app:drawableTopCompat="@drawable/report" />

                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prescription"
                    android:textColor="#0ebe7f"
                    app:drawableTopCompat="@drawable/prescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/invoice"
                    android:textColor="#677294"
                    app:drawableTopCompat="@drawable/invoice" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="3dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:background="#e5e5e5"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/recordCreatedOn"
            android:fontFamily="casual"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_mode_edit_24"
            android:layout_marginTop="-20dp"
            android:layout_marginStart="350dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theDataOfCreatingOne"
            android:fontFamily="casual"
            android:textColor="#0ebe7f"/>

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="3dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:background="#e5e5e5"
            />
            
        <Button
            android:layout_width="270dp"
            android:layout_height="54dp"
            android:backgroundTint="#0ebe7f"
            android:layout_gravity="center"
            android:text="@string/uploadRecord"
            android:textSize="20sp"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>