<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg_items_removed"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:text="@string/heading"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="3dp"
            android:text="@string/para"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="3dp"
            android:text="@string/bullet"
            android:textColor="#42CF05"
            android:textSize="41sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-9dp"
            android:text="@string/bulletOnePara" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"

        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="3dp"
            android:text="@string/bullet"
            android:textColor="#42CF05"
            android:textSize="41sp"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_marginTop="-9dp"
            android:text="@string/bulletTwoPara" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"

        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="3dp"
            android:text="@string/bullet"
            android:textColor="#42CF05"
            android:textSize="41sp"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="-9dp"
            android:text="@string/bulletThreePara" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"

        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="3dp"
            android:text="@string/bullet"
            android:textColor="#689F38"
            android:textSize="41sp"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginTop="-9dp"
            android:text="@string/bulletFourPara" />

    </LinearLayout>

    <TextView
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:text="@string/paraSecond" />

</LinearLayout>