<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bbg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="331dp"
            android:layout_height="334dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/bdoc11">


        </ImageView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bdes11"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="50dp"
            android:textSize="28dp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bdes12"
            android:textAlignment="center"
            android:textSize="14dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/shadowgr"
            android:textStyle="bold"></TextView>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/bbut11"
            android:backgroundTint="@color/primary"
            android:textStyle="bold"></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00D3B7B7"
            android:text="@string/skip"
            android:textColor="@color/shadowgr"
            android:textStyle="bold"
            android:layout_marginLeft="155dp">

        </Button>

    </LinearLayout>



</LinearLayout>